Add top menu for index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Honeytone!
+<html>
+    <head>
+        <title>Honeytone - Draw on screen on macOS</title>
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="fonts/fonts.css">
+    </head>
+
+    <body>
+        <div id="warpper">
+            <div id="top">
+                <div id="menu">
+                    <div id="logo">
+                        <a href="/">Honeytone</a>
+                    </div>
+                    <ul>
+                        <li><a href="#">Demo</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Download</a></li>
+                        <li><a href="#">Buy</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                <div>
+            </div>
+        </div>
+    </body>
+</html>
+
