--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
                         <a href="/">Honeytone</a>
                     </div>
                     <ul>
-                        <li><a href="#">Demo</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">Download</a></li>
-                        <li><a href="#">Buy</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">DEMO</a></li>
+                        <li><a href="#">FEATURES</a></li>
+                        <li><a href="#">DOWNLOADS</a></li>
+                        <li><a href="#">BUY</a></li>
+                        <li><a href="#">CONTACT</a></li>
                     </ul>
                 <div>
             </div>
