Make menu items border bottom line while clicking on it

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Honeytone - Draw on screen on macOS</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="fonts/fonts.css">
+        <script type="text/javascript" src="javascript/main.js"></script>
     </head>
 
     <body>
@@ -13,11 +14,11 @@
                         <a href="/">Honeytone</a>
                     </div>
                     <ul>
-                        <li><a href="#">DEMO</a></li>
-                        <li><a href="#">FEATURES</a></li>
-                        <li><a href="#">DOWNLOADS</a></li>
-                        <li><a href="#">BUY</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li class="item"><a href="#">DEMO</a></li>
+                        <li class="item"><a href="#">FEATURES</a></li>
+                        <li class="item"><a href="#">DOWNLOADS</a></li>
+                        <li class="item"><a href="#">BUY</a></li>
+                        <li class="item"><a href="#">CONTACT</a></li>
                     </ul>
                 <div>
             </div>
