Add middle section to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <body>
         <div id="warpper">
+            <!-- Top -->
             <div id="top">
                 <div id="menu">
                     <div id="logo">
@@ -20,7 +21,18 @@
                         <li class="item"><a href="#">BUY</a></li>
                         <li class="item"><a href="#">CONTACT</a></li>
                     </ul>
-                <div>
+                </div>
+            </div>
+
+            <!-- Middle -->
+            <div id="middle">
+                <div id="left">
+                    <p>Draw Beautiful Things on Screen (macOS)</p>
+                </div>
+
+                <div id="right">
+                    <img src="images/Honeytone-Screenshot-Crop.png">
+                </div>
             </div>
         </div>
     </body>
