--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
                 </div>
             </div>
 
-            <!-- Middle -->
-            <div id="middle">
-                <div id="left">
-                    <p>Draw Beautiful Things on Screen (macOS)</p>
-                </div>
+            <div id="inner-warpper">
+                <!-- Middle -->
+                <div id="middle">
+                    <div id="left">
+                        <p>Draw Beautiful Things on Screen (macOS)</p>
+                    </div>
 
-                <div id="right">
-                    <img src="images/Honeytone-Screenshot-Crop.png">
+                    <div id="right">
+                        <img src="images/Honeytone-Screenshot-Crop.png">
+                    </div>
                 </div>
             </div>
         </div>
