--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div id="middle">
                     <div id="left">
                         <p>Draw Beautiful Things on Screen (macOS)</p>
+                        <a href="#demo">See Demo</a>
                     </div>
 
                     <div id="right">
