Add features list to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <a href="/">Honeytone</a>
                     </div>
                     <ul>
-                        <li class="item"><a href="#">FEATURES</a></li>
+                        <li class="item"><a href="#features">FEATURES</a></li>
                         <li class="item"><a href="#">DEMO</a></li>
                         <li class="item"><a href="#">DOWNLOADS</a></li>
                         <li class="item"><a href="#">BUY</a></li>
@@ -34,6 +34,43 @@
 
                     <div id="right">
                         <img src="images/Honeytone-Screenshot-Crop.png">
+                    </div>
+                </div>
+
+                <!-- Features -->
+                <div id="features">
+                    <h2>What you can do with Honeytone</h2>
+                    <div id="features-list">
+                        <div id="text">
+                            <h3>Text</h3>
+                            Type text anywhere on your screen in any color and
+                            different sizes, by simple click and start typing.
+                        </div>
+
+                        <div id="shapes">
+                            <h3>Shapes</h3>
+                            Honeytone contains expressive shapes for you to use,
+                            including fee Pen, Rectangle, Ellipse, Arrow and Lines.
+                        </div>
+
+                        <div id="whiteboard">
+                            <h3>Whiteboard</h3>
+                            Toggle your screen into whiteboard or blackboard by only one click.
+                        </div>
+
+                        <div id="colors">
+                            <h3>Colors</h3>
+                            Honeytone provides 30 color palettes, so that you can easily choose your color.
+                        </div>
+
+                        <div id="timer">
+                            <h3>Fading Ink</h3>
+                            You can choose 1 seconds, 3 seconds or 5 seconds, after this time, your drawn ink will fadeout automatically after you draw it.
+                        </div>
+
+                        <div id="eraser">
+                            <h3>Eraser</h3>
+                            Click on anything you put on screen by using eraser tool to remove them from screen easily.
                     </div>
                 </div>
             </div>
