Add demo section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     </div>
                     <ul>
                         <li class="item"><a href="#features">FEATURES</a></li>
-                        <li class="item"><a href="#">DEMO</a></li>
+                        <li class="item"><a href="#demo">DEMO</a></li>
                         <li class="item"><a href="#">DOWNLOADS</a></li>
                         <li class="item"><a href="#">BUY</a></li>
                         <li class="item"><a href="#">CONTACT</a></li>
@@ -72,6 +72,11 @@
                             <h3>Eraser</h3>
                             Click on anything you put on screen by using eraser tool to remove them from screen easily.
                     </div>
+                </div>
+
+                <!-- Demo -->
+                <div id="demo">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tqGuA0lPSEA?si=fObfWOjAn4eH-P9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
