--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                         <div id="timer">
                             <h3>Fading Ink</h3>
-                            You can choose 1 seconds, 3 seconds or 5 seconds, after this time, your drawn ink will fadeout automatically after you draw it.
+                            You can choose from 1 second, 3 seconds or 5 seconds, after this time, your drawn ink will fadeout automatically after you draw it.
                         </div>
 
                         <div id="eraser">
