Add download link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li class="item"><a href="#features">FEATURES</a></li>
                         <li class="item"><a href="#demo">DEMO</a></li>
-                        <li class="item"><a href="#">DOWNLOADS</a></li>
+                        <li class="item"><a href="https://github.com/Honeytone-Mac-App/Honeytone-Host/releases/download/v1.0/Honeytone-v1.0.dmg">DOWNLOADS</a></li>
                         <li class="item"><a href="#">BUY</a></li>
                         <li class="item"><a href="#">CONTACT</a></li>
                     </ul>
