--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <li class="item"><a href="#features">FEATURES</a></li>
                         <li class="item"><a href="#demo">DEMO</a></li>
                         <li class="item"><a href="https://github.com/Honeytone-Mac-App/Honeytone-Host/releases/download/v1.0/Honeytone-v1.0.dmg">DOWNLOADS</a></li>
-                        <li class="item"><a href="#">BUY</a></li>
+                        <li class="item"><a href="#buy">BUY</a></li>
                         <li class="item"><a href="#">CONTACT</a></li>
                     </ul>
                 </div>
@@ -77,6 +77,12 @@
                 <!-- Demo -->
                 <div id="demo">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/tqGuA0lPSEA?si=fObfWOjAn4eH-P9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+
+                <!-- Buy -->
+                <div id="buy">
+                    <p>One time purchase via our payment gateway FastSpring</p>
+                    <a href="http://sites.fastspring.com/pixeleggsoftware/product/honeytone">Buy for USD $12</a>
                 </div>
             </div>
         </div>
