--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li class="item"><a href="#demo">DEMO</a></li>
                         <li class="item"><a href="https://github.com/Honeytone-Mac-App/Honeytone-Host/releases/download/v1.0/Honeytone-v1.0.dmg">DOWNLOADS</a></li>
                         <li class="item"><a href="#buy">BUY</a></li>
-                        <li class="item"><a href="#">CONTACT</a></li>
+                        <li class="item"><a href="#contact">CONTACT</a></li>
                     </ul>
                 </div>
             </div>
@@ -81,10 +81,25 @@
 
                 <!-- Buy -->
                 <div id="buy">
-                    <p>One time purchase via our payment gateway FastSpring</p>
+                    <p>One-time purchase via our payment gateway FastSpring</p>
                     <a href="http://sites.fastspring.com/pixeleggsoftware/product/honeytone">Buy for USD $12</a>
                 </div>
+
             </div>
+
+        </div>
+
+        <!-- Contact Us -->
+        <div id="contact">
+            <h3>Contact Us</h3>
+            <p>
+                Please report bugs, request new features via this 
+                <a href="mailto:threcius@yahoo.com">email</a>.
+            </p>
+
+            <p>
+                Pixel Egg Studio. All rights reserved.
+            </p>
         </div>
     </body>
 </html>
