--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
                         <div id="eraser">
                             <h3>Eraser</h3>
                             Click on anything you put on screen by using eraser tool to remove them from screen easily.
+                        </div>
                     </div>
                 </div>
 
                 <!-- Demo -->
                 <div id="demo">
+                    <h2>Demo</h2>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/tqGuA0lPSEA?si=fObfWOjAn4eH-P9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
 
