--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="fonts/fonts.css">
         <script type="text/javascript" src="javascript/main.js"></script>
+        <meta name="description" content="Draw on screen on macOS on top of any other apps.">
+        <meta name="keywords" content="Draw on screen, macOS, annotation on screen">
     </head>
 
     <body>
@@ -31,7 +33,6 @@
                         <p>Draw Beautiful Things on Screen (macOS)</p>
                         <a href="#demo">See Demo</a>
                     </div>
-
                     <div id="right">
                         <img src="images/Honeytone-Screenshot-Crop.png">
                     </div>
