Add download button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li class="item"><a href="#features">FEATURES</a></li>
                         <li class="item"><a href="#demo">DEMO</a></li>
-                        <li class="item"><a href="/download">DOWNLOADS</a></li>
+                        <li class="item"><a href="#download">DOWNLOADS</a></li>
                         <li class="item"><a href="#buy">BUY</a></li>
                         <li class="item"><a href="#contact">CONTACT</a></li>
                     </ul>
@@ -80,6 +80,12 @@
                 <div id="demo">
                     <h2>Demo</h2>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/tqGuA0lPSEA?si=fObfWOjAn4eH-P9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+
+                <!-- Download -->
+                <div id="download">
+                    <p>Download for free</p>
+                    <a href="/download">Download</a>
                 </div>
 
                 <!-- Buy -->
