--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li class="item"><a href="#features">FEATURES</a></li>
                         <li class="item"><a href="#demo">DEMO</a></li>
-                        <li class="item"><a href="#download">DOWNLOADS</a></li>
+                        <li class="item"><a href="#download">DOWNLOAD</a></li>
                         <li class="item"><a href="#buy">BUY</a></li>
                         <li class="item"><a href="#contact">CONTACT</a></li>
                     </ul>
@@ -84,7 +84,7 @@
 
                 <!-- Download -->
                 <div id="download">
-                    <p>Download for free</p>
+                    <p>Download free trial</p>
                     <a href="/download">Download</a>
                 </div>
 
